Fix duplicate media issue